# hunspell-lsp

./: CLAUDE.md  CRASH_FIX_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
src/: config.rs  dictionary_io.rs  harper_client.rs  harper_integration.rs  lib.rs  main.rs
tests/: README.md  test.md  test_backtick_exclusion.md  test_harper_integration.md  test_ignore_lang.md  test_manual.sh  test_url_exclusion.md
tests/integration/: README.md  test_long_document.py  test_responsive_shutdown.py  test_shutdown_during_processing.py
