[package]
name = "hunspell-lsp"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Language Server Protocol implementation providing spell checking using Hunspell dictionaries"
repository = "https://github.com/Dronakurl/hunspell-lsp"
readme = "README.md"
keywords = ["lsp", "spell-check", "hunspell", "language-server"]
categories = ["development-tools", "text-processing"]
exclude = ["tests/*"]

[lib]
name = "hunspell_lsp"
path = "src/lib.rs"

[[bin]]
name = "hunspell-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
hunspell-rs = "0.4"
regex = "1.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "test-util", "process", "io-util"] }
dirs = "5"
anyhow = "1"
url = "2"
which = "6"

[dev-dependencies]
tempfile = "3"
